--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "unipath",
     "node",
     "idiomatic",
-    "manu phatak",
+    "join",
     "utility"
   ],
   "author": "Manu Phatak <bionikspoon@gmail.com>",
